See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.42.00

              pgmbentley: fix output; black areas not black.

              pamtosvg: fix various bugs: crash, poor tracing, memory leaks.

              pamtosvg: fix log file name with Standard Input.
              
              ppmtoarbtxt: fix array bounds violation with really large
              replacement sequence.

              ppmtoarbtxt: fix missing right parenthesis with impostor
              replacement sequence.

              pnmnlfilt: fix internal error "impossible alpha value".

              tifftopnm: orient raster properly in row-by-row operation
              when TIFF uses nonstandard raster orientation.  (ORIENTATION
              tag).

              pamflip: Rewrite low-memory algorithm; use temp files and
              conserve virtual as well as real memory.

              pamundice: Fix bogus error about missing "-instem" option.

              Add pm_tmpfile_fd() and pm_make_tmpfile_fd().

              pbmtext: fail cleanly if input line is > 5000 characters.

              pbmtext: fail cleanly if -width, -space, or -lspace is
              too large for computation.  Thanks Prophet of the Way
              <afu@wta.att.ne.jp>.

              pbmtext: fix negative -space.

              Various things to make it build on Windows without POSIX
              emulation.

              Build: Include LDFLAGS environment variable in link of
              build tools.
              
07.12.27 BJH  Release 10.41.00

              pamenlarge: much faster for PBM.  Thanks Prophet of the
              Way <afu@wta.att.ne.jp>.

              pamenlarge: remove arithmetic overflow.

              pnmmontage: new search algorithm to choose square
              output quickly.  Thanks "Nic Roets" <nroets@gmail.com>.

              bmptopnm: fix crash with 16 bit images.
